@@ -4,8 +4,8 @@ package z9.second.domain.user.service;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
-import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Optional;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.transaction.annotation.Transactional;
@@ -16,12 +16,11 @@ import z9.second.domain.user.dto.UserResponse;
 import z9.second.global.exception.CustomException;
 import z9.second.global.response.ErrorCode;
 import z9.second.integration.SpringBootTestSupporter;
-import z9.second.model.schedules.SchedulesCheckInEntity;
+import z9.second.model.checkIn.CheckInEntity;
 import z9.second.model.schedules.SchedulesEntity;
 import z9.second.model.user.User;
 import z9.second.model.user.UserRole;
 import z9.second.model.user.UserType;
-import z9.second.model.userfavorite.UserFavorite;
 
 @Transactional
 class UserServiceImplTest extends SpringBootTestSupporter {
@@ -30,23 +29,16 @@ class UserServiceImplTest extends SpringBootTestSupporter {
     @Test
     void findUserInfo() {
         // given
-        String loginId = "test1@email.com";
-        String password = "!test1234";
-        String nickname = "test";
-        User newUser = User.createNewUser(loginId, password, nickname);
-        User saveUser = userRepository.save(newUser);
+        //사용자 등록
+        List<User> saveUserList = userFactory.saveAndCreateUserData(1);
+        User saveUser = saveUserList.getFirst();
 
-        List<String> favorite = List.of("관심사1", "관심사2");
-        FavoriteEntity fe1 = FavoriteEntity.createNewFavorite("관심사1");
-        FavoriteEntity fe2 = FavoriteEntity.createNewFavorite("관심사2");
-        List<FavoriteEntity> saveFavoriteEntities = favoriteRepository.saveAll(List.of(fe1, fe2));
+        // 관심사 등록
+        List<FavoriteEntity> saveFavoriteList = favoriteFactory.saveAndCreateFavoriteData(2);
+        List<String> saveFavoriteNameList = saveFavoriteList.stream().map(FavoriteEntity::getName).toList();
 
-        userFavoriteRepository.save(
-                UserFavorite.createNewUserFavorite(saveUser, saveFavoriteEntities.get(0)));
-        userFavoriteRepository.save(UserFavorite.createNewUserFavorite(saveUser, saveFavoriteEntities.get(1)));
-
-        em.flush();
-        em.clear();
+        // 회원-관심사 등록
+        userFactory.saveUserFavorite(saveUser, saveFavoriteList);
 
         // when
         UserResponse.UserInfo findData = userService.findUserInfo(saveUser.getId());
@@ -54,25 +46,20 @@ class UserServiceImplTest extends SpringBootTestSupporter {
         // then
         assertThat(findData)
                 .extracting("nickname", "type", "role")
-                .containsExactly(nickname, UserType.NORMAL.getValue(), UserRole.ROLE_USER.getValue());
+                .containsExactly(saveUser.getNickname(), UserType.NORMAL.getValue(), UserRole.ROLE_USER.getValue());
         assertThat(findData.getCreatedAt()).matches("\\d{4}-\\d{2}-\\d{2}");
         assertThat(findData.getFavorite())
                 .hasSize(2)
-                .containsExactlyInAnyOrder("관심사1", "관심사2");
+                .containsAll(saveFavoriteNameList);
     }
 
     @DisplayName("회원 정보를 찾습니다. 관심사가 없을 경우, 빈 배열이 출력되어야 합니다.")
     @Test
     void findUserInfo2() {
         // given
-        String loginId = "test1@email.com";
-        String password = "!test1234";
-        String nickname = "test";
-        User newUser = User.createNewUser(loginId, password, nickname);
-        User saveUser = userRepository.save(newUser);
-
-        em.flush();
-        em.clear();
+        //사용자 등록
+        List<User> saveUserList = userFactory.saveAndCreateUserData(1);
+        User saveUser = saveUserList.getFirst();
 
         // when
         UserResponse.UserInfo findData = userService.findUserInfo(saveUser.getId());
@@ -80,7 +67,7 @@ class UserServiceImplTest extends SpringBootTestSupporter {
         // then
         assertThat(findData)
                 .extracting("nickname", "type", "role")
-                .containsExactly(nickname, UserType.NORMAL.getValue(), UserRole.ROLE_USER.getValue());
+                .containsExactly(saveUser.getNickname(), UserType.NORMAL.getValue(), UserRole.ROLE_USER.getValue());
         assertThat(findData.getCreatedAt()).matches("\\d{4}-\\d{2}-\\d{2}");
         assertThat(findData.getFavorite())
                 .hasSize(0);
@@ -91,9 +78,6 @@ class UserServiceImplTest extends SpringBootTestSupporter {
     void findUserInfo3() {
         // given
 
-        em.flush();
-        em.clear();
-
         // when // then
         assertThatThrownBy(() -> userService.findUserInfo(1L))
                 .isInstanceOf(CustomException.class)
@@ -101,102 +85,90 @@ class UserServiceImplTest extends SpringBootTestSupporter {
                 .isEqualTo(ErrorCode.USER_NOT_FOUND);
     }
 
-    @DisplayName("회원 정보를 수정 합니다.")
+    @DisplayName("회원 정보를 수정 합니다. 닉네임을 변경할 수 있습니다.")
     @Test
     void patchUserInfo1() {
         // given
-        String loginId = "test1@email.com";
-        String password = "!test1234";
-        String nickname = "test";
-        User newUser = User.createNewUser(loginId, password, nickname);
-        User saveUser = userRepository.save(newUser);
+        List<User> saveUserList = userFactory.saveAndCreateUserData(1);
+        User saveUser = saveUserList.getFirst();
 
-        List<String> favorite = List.of("관심사1", "관심사2");
-        FavoriteEntity fe1 = FavoriteEntity.createNewFavorite("관심사1");
-        FavoriteEntity fe2 = FavoriteEntity.createNewFavorite("관심사2");
-        List<FavoriteEntity> saveFavoriteEntities = favoriteRepository.saveAll(List.of(fe1, fe2));
+        // 관심사 등록
+        List<FavoriteEntity> saveFavoriteList = favoriteFactory.saveAndCreateFavoriteData(2);
+        List<String> saveFavoriteNameList = saveFavoriteList.stream().map(FavoriteEntity::getName).toList();
 
-        userFavoriteRepository.save(UserFavorite.createNewUserFavorite(saveUser, saveFavoriteEntities.get(0)));
+        // 회원-관심사 등록
+        userFactory.saveUserFavorite(saveUser, saveFavoriteList);
 
         String changeNickname = "변경된닉네임";
-        UserRequest.PatchUserInfo request = UserRequest.PatchUserInfo.of(changeNickname, favorite);
-
-        em.flush();
-        em.clear();
+        UserRequest.PatchUserInfo request = UserRequest.PatchUserInfo.of(changeNickname, saveFavoriteNameList);
 
         // when
         userService.patchUserInfo(request, saveUser.getId());
 
         // then
-        User findUser = userRepository.findById(saveUser.getId()).get();
+        Optional<User> findUserOptional = userRepository.findById(saveUser.getId());
+        assertThat(findUserOptional).isPresent();
+        User findUser = findUserOptional.get();
         List<String> findFavoriteList = userFavoriteRepository.findFavoriteNamesByUserId(saveUser.getId());
         assertThat(findUser)
                 .extracting("nickname")
                 .isEqualTo(changeNickname);
         assertThat(findFavoriteList)
                 .hasSize(2)
-                .containsExactlyInAnyOrder("관심사1", "관심사2");
+                .containsAll(saveFavoriteNameList);
     }
 
     @DisplayName("회원 정보를 수정 합니다. 원래 있던 관심사가 입력되지 않으면 그전 데이터는 삭제 됩니다.")
     @Test
     void patchUserInfo2() {
         // given
-        String loginId = "test1@email.com";
-        String password = "!test1234";
-        String nickname = "test";
-        User newUser = User.createNewUser(loginId, password, nickname);
-        User saveUser = userRepository.save(newUser);
+        List<User> saveUserList = userFactory.saveAndCreateUserData(1);
+        User saveUser = saveUserList.getFirst();
 
-        List<String> favorite = List.of("관심사1", "관심사2");
-        FavoriteEntity fe1 = FavoriteEntity.createNewFavorite("관심사1");
-        FavoriteEntity fe2 = FavoriteEntity.createNewFavorite("관심사2");
-        List<FavoriteEntity> saveFavoriteEntities = favoriteRepository.saveAll(List.of(fe1, fe2));
+        // 관심사 등록
+        List<FavoriteEntity> saveFavoriteList = favoriteFactory.saveAndCreateFavoriteData(2);
+        FavoriteEntity saveFavorite = saveFavoriteList.getFirst();
 
-        userFavoriteRepository.save(UserFavorite.createNewUserFavorite(saveUser, saveFavoriteEntities.get(0)));
-        userFavoriteRepository.save(UserFavorite.createNewUserFavorite(saveUser, saveFavoriteEntities.get(1)));
+        // 회원-관심사 등록
+        userFactory.saveUserFavorite(saveUser, saveFavoriteList);
 
         String changeNickname = "변경된닉네임";
-        UserRequest.PatchUserInfo request = UserRequest.PatchUserInfo.of(changeNickname, List.of(fe1.getName()));
-
-        em.flush();
-        em.clear();
+        UserRequest.PatchUserInfo request = UserRequest.PatchUserInfo.of(changeNickname, List.of(saveFavorite.getName()));
 
         // when
         userService.patchUserInfo(request, saveUser.getId());
 
         // then
-        User findUser = userRepository.findById(saveUser.getId()).get();
+        Optional<User> findUserOptional = userRepository.findById(saveUser.getId());
+        assertThat(findUserOptional).isPresent();
+        User findUser = findUserOptional.get();
+
         List<String> findFavoriteList = userFavoriteRepository.findFavoriteNamesByUserId(saveUser.getId());
+
         assertThat(findUser)
                 .extracting("nickname")
                 .isEqualTo(changeNickname);
         assertThat(findFavoriteList)
                 .hasSize(1)
-                .containsExactlyInAnyOrder("관심사1");
+                .containsExactlyInAnyOrder(request.getFavorite().getFirst());
     }
 
     @DisplayName("회원 정보를 수정 합니다. 서버에 등록된 관심사가 아니라면, 오류가 발생합니다.")
     @Test
     void patchUserInfo3() {
         // given
-        String loginId = "test1@email.com";
-        String password = "!test1234";
-        String nickname = "test";
-        User newUser = User.createNewUser(loginId, password, nickname);
-        User saveUser = userRepository.save(newUser);
+        List<User> saveUserList = userFactory.saveAndCreateUserData(1);
+        User saveUser = saveUserList.getFirst();
 
-        List<String> favorite = List.of("관심사1", "관심사2");
-        FavoriteEntity fe1 = FavoriteEntity.createNewFavorite("관심사1");
-        List<FavoriteEntity> saveFavoriteEntities = favoriteRepository.saveAll(List.of(fe1));
+        // 관심사 등록
+        List<FavoriteEntity> saveFavoriteList = favoriteFactory.saveAndCreateFavoriteData(2);
 
-        userFavoriteRepository.save(UserFavorite.createNewUserFavorite(saveUser, saveFavoriteEntities.get(0)));
+        // 회원-관심사 등록
+        userFactory.saveUserFavorite(saveUser, saveFavoriteList);
 
         String changeNickname = "변경된닉네임";
-        UserRequest.PatchUserInfo request = UserRequest.PatchUserInfo.of(changeNickname, favorite);
-
-        em.flush();
-        em.clear();
+        UserRequest.PatchUserInfo request =
+                UserRequest.PatchUserInfo.of(changeNickname, List.of("미등록 관심사"));
 
         // when // then
         assertThatThrownBy( () -> userService.patchUserInfo(request, saveUser.getId()))
@@ -210,63 +182,29 @@ class UserServiceImplTest extends SpringBootTestSupporter {
     void findUserSchedules1() {
         // given
         //사용자 등록
-        String loginId = "test1@email.com";
-        String password = "!test1234";
-        String nickname = "test";
-        User newUser = User.createNewUser(loginId, password, nickname);
-        User saveUser = userRepository.save(newUser);
+        List<User> saveUserList = userFactory.saveAndCreateUserData(1);
+        User saveUser = saveUserList.getFirst();
 
-        //관심사 등록
-        FavoriteEntity fe1 = FavoriteEntity.createNewFavorite("관심사1");
-        FavoriteEntity fe2 = FavoriteEntity.createNewFavorite("관심사2");
-        List<FavoriteEntity> saveFavoriteEntities = favoriteRepository.saveAll(List.of(fe1, fe2));
-        userFavoriteRepository.save(UserFavorite.createNewUserFavorite(saveUser, saveFavoriteEntities.get(0)));
-        userFavoriteRepository.save(UserFavorite.createNewUserFavorite(saveUser, saveFavoriteEntities.get(1)));
+        // 관심사 등록
+        List<FavoriteEntity> saveFavoriteList = favoriteFactory.saveAndCreateFavoriteData(2);
+        FavoriteEntity saveFavorite = saveFavoriteList.getFirst();
+
+        // 회원-관심사 등록
+        userFactory.saveUserFavorite(saveUser, saveFavoriteList);
 
         //방 생성
-        ClassEntity newClass = ClassEntity.builder()
-                .name("새로운 모임")
-                .favorite(fe1.getName())
-                .description("모임 설명 글 입니다!!")
-                .masterId(saveUser.getId())
-                .build();
-        newClass.addMember(saveUser.getId());
-        ClassEntity saveClass = classRepository.save(newClass);
+        List<ClassEntity> saveClassList =
+                classFactory.saveAndCreateClassData(1, saveUser, saveFavorite);
+        ClassEntity saveClass = saveClassList.getFirst();
 
-        //스케줄 생성 2개
-        SchedulesEntity schedules = SchedulesEntity.builder()
-                .classes(saveClass)
-                .meetingTime(LocalDateTime.now().toString())
-                .meetingTitle("정기모임 1회차")
-                .build();
-        SchedulesEntity saveSchedule = schedulesRepository.save(schedules);
+        //스케줄 생성
+        List<SchedulesEntity> saveSchedulesList =
+                schedulesFactory.saveAndCreateClassData(2, saveClass);
+        SchedulesEntity saveSchedule = saveSchedulesList.getFirst();
 
-        SchedulesEntity schedules2 = SchedulesEntity.builder()
-                .classes(saveClass)
-                .meetingTime(LocalDateTime.now().toString())
-                .meetingTitle("정기모임 2회차")
-                .build();
-        SchedulesEntity saveSchedule2 = schedulesRepository.save(schedules2);
-
-        //체크인 등록 2개
-        SchedulesCheckInEntity newCheckin = SchedulesCheckInEntity
-                .builder()
-                .schedules(saveSchedule)
-                .userId(saveUser.getId())
-                .checkIn(true)
-                .build();
-        schedulesCheckInEntityRepository.save(newCheckin);
-
-        SchedulesCheckInEntity newCheckin2 = SchedulesCheckInEntity
-                .builder()
-                .schedules(saveSchedule)
-                .userId(saveUser.getId())
-                .checkIn(false)
-                .build();
-        schedulesCheckInEntityRepository.save(newCheckin2);
-
-        em.flush();
-        em.clear();
+        //체크인 등록
+        List<CheckInEntity> saveCheckInList =
+                checkInFactory.saveAndCreateCheckInData(2, saveSchedule, saveUser, List.of(true, false));
 
         // when
         UserResponse.UserSchedule findData = userService.findUserSchedules(saveUser.getId());
@@ -276,6 +214,33 @@ class UserServiceImplTest extends SpringBootTestSupporter {
                 .hasSize(1);
         assertThat(findData.getSchedule().getFirst())
                 .extracting("meetingTitle")
-                .isEqualTo("정기모임 1회차");
+                .isEqualTo(saveSchedule.getMeetingTitle());
+    }
+
+    @DisplayName("로그인 한 회원의 모든 모임을 조회 합니다.")
+    @Test
+    void findUserClasses1() {
+        // given
+        // 회원 등록
+        List<User> saveUserList = userFactory.saveAndCreateUserData(1);
+        User saveUser = saveUserList.getFirst();
+
+        // 관심사 등록
+        List<FavoriteEntity> saveFavoriteList = favoriteFactory.saveAndCreateFavoriteData(1);
+        FavoriteEntity saveFavorite = saveFavoriteList.getFirst();
+
+        // 모임 등록
+        List<ClassEntity> saveClassList =
+                classFactory.saveAndCreateClassData(1, saveUser, saveFavorite);
+        ClassEntity saveClass = saveClassList.getFirst();
+
+        // when
+        UserResponse.UserClass findData = userService.findUserClasses(saveUser.getId());
+
+        // then
+        assertThat(findData.getClassInfo()).hasSize(1);
+        assertThat(findData.getClassInfo().getFirst())
+                .extracting("name", "description", "favorite")
+                .containsExactly(saveClass.getName(), saveClass.getDescription(), saveClass.getFavorite());
     }
 }
